fix tab spacing for subsections

--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -42,3 +42,30 @@ $theme-dark: #222;
         "mixins",
         "base"
 ;
+
+// Report heading hierarchy
+.report-body {
+  h2 {
+    font-size: 2em;
+    font-weight: 700;
+    margin-top: 40px;
+    border-bottom: 2px solid #e0e0e0;
+    padding-bottom: 8px;
+  }
+
+  h3 {
+    font-size: 1.4em;
+    font-weight: 600;
+    margin-top: 30px;
+    margin-left: 15px;
+    color: #444;
+  }
+
+  h4 {
+    font-size: 1.1em;
+    font-weight: 600;
+    margin-top: 20px;
+    margin-left: 30px;
+    color: #666;
+  }
+}
